--- a/Inicio.html
+++ b/Inicio.html
@@ -23,7 +23,7 @@
         <table id="company">
             <tr>
                 <td>
-                    <h1>Manzanita's productions</h1>
+                    <h1>Manzanita production's</h1>
                 </td>
                 <td>
                     <img src="img/manzana.png" alt="" id="manzanita">
