--- a/index.html
+++ b/index.html
@@ -13,16 +13,32 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div class="container">
-        <h3>Arrastra y coloca el nombre a cada animalito de la granja</h3>
-        <div class="draggable-objects"></div>
-        <div class="drop-points"></div>
+    <div id="registro">
+        <div class="container text-center">
+            <h1>¡Hola!</h1>
+            <h2>Ingresa tu nombre aquí</h3>
+            <input type="text" class="text-bg-info" id="jugador">
+            <button onclick="mostrarJuego()">Comenzar juego</button>
+        </div>
     </div>
-    <div class="controls-container">
-        <p id="result"></p>
-        <button id="start">Comienza Juego</button>
+    <div id="juego" hidden>
+        <div class="container">
+            <div style="position: absolute;left: 85%; top: 0; margin: 25px;">
+                <h1 id="cronometro">00.00.00</h1>    
+            </div>
+            <h3>Arrastra y coloca el nombre a cada animalito de la granja</h3>
+            <div class="draggable-objects"></div>
+            <div class="drop-points"></div>
+        </div>
+        <div class="controls-container">
+            <p id="ganar"></p>
+            <p id="nombre"></p>
+            <p id="puntuacion"></p>
+            <button id="start">Comienza Juego</button>
+        </div>
     </div>
     <!-- Script -->
+    <script src="js/cronometro.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
