--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
-    <!-- Estilos --> 
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Estilos -->
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+  <body>
     <div class="container">
-        <h3>Arrastra y coloca el nombre a cada animalito de la granja</h3>
-        <div class="draggable-objects"></div>
-        <div class="drop-points"></div>
+      <h3>Arrastra y coloca el nombre a cada animalito de la granja</h3>
+      <div class="draggable-objects"></div>
+      <div class="drop-points"></div>
     </div>
     <div class="controls-container">
-        <p id="result"></p>
-        <button id="start">Comienza Juego</button>
+      <button id="start">Comienza Juego</button>
     </div>
+
+    <div class="final-screen">
+        <canvas id="myCanvas"></canvas>
+        
+        <form class="registro">
+        <p>La puntuación final de "alias" es: </p>
+          <button type="submit">Guardar</button>
+          <button onclick="reiniciarJuego()">Jugar de nuevo</button>
+        </form>
+        
+      </div>
     <!-- Script -->
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
