--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <p id="nombre"></p>
             <p id="puntuacion"></p>
             <button id="start">Comienza Juego</button>
+            <button id="score" onclick="cambiarPagina('scores.html')">Ver puntuaciones</button>
         </div>
     </div>
     <!-- Script -->
