--- a/index.html
+++ b/index.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
-    <!-- Estilos --> 
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-    <audio src="media/A Day to Remember - FiftySounds.mp3" autoplay="true" loop id="cancion"></audio>
-    <div id="registro" hidden>
-        <div class="registro text-center">
-            <h1>¡Hola!</h1>
-            <h2>Ingresa tu nombre aquí</h3>
-            <input type="text" class="text-bg-info" id="jugador">
-            <button onclick="mostrarJuego()">Aceptar</button>
-        </div>
-    </div>
-    <div id="juego">
-        <div class="container">
-            <div class="control">
-                <button onclick="controlarMusica()" id="controlMusica">
-                    <i id="iconoMusica" class="fa-solid fa-volume-high"></i>
-                </button>
-                <button onclick="terminarJuego()" id="controlMusica"><i class="fa-solid fa-circle-xmark"></i></button>
-                <h1 id="cronometro">00.00.00</h1>
-            </div>
-            <h3>Arrastra y coloca el nombre a cada animalito de la granja</h3>
-            <div class="draggable-objects"></div>
-            <div class="drop-points"></div>
-        </div>
-        <div class="controls-container">
-            <p id="ganar"></p>
-            <p id="nombre"></p>
-            <p id="puntuacion"></p>
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Rampart+One&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilos_inicio.css">
+    <script src="js/script_inicio.js"></script>
 
-            <button id="start">Comienza Juego</button>
-            <button id="score" onclick="cambiarPagina('scores.html')">Ver puntuaciones</button>
-        </div>
+    <title>La granja de la Tía Paola</title>
+</head>
+
+<body>
+    <audio src="media/A Day to Remember - FiftySounds.mp3" autoplay="true" id="cancion"></audio>
+
+    <div id="texto">
+        <table id="company">
+            <tr>
+                <td>
+                    <h1>Manzanita production's</h1>
+                </td>
+                <td>
+                    <img src="img/manzana.png" alt="" id="manzanita">
+                </td>
+            </tr>
+        </table>
+
+        <br>
+        <h1>Presenta</h1>
+        <br>
+        <h1>La granja de la Tía Paola</h1>
+
     </div>
-    <!-- Script -->
-    <script src="https://kit.fontawesome.com/ade620492b.js" crossorigin="anonymous"></script>
-    <script src="js/musica.js"></script>
-    <script src="js/cronometro.js"></script>
-    <script src="js/script.js"></script>
+    
+    <section id="cajasoltar">
+        <canvas id="myCanvas" width="1300" height="100" ></canvas>
+    </section>
+    <script src="js/script_inicio.js" >
+
+    </script>
+    <br>
+    <button type="button" class="btn btn-warning" onclick="location.href='inicio.html'" id="boton">¡Jugar!</button>
+   
 </body>
 </html>
