--- a/scores.html
+++ b/scores.html
@@ -9,7 +9,7 @@
     <script src="js/script_scores.js"></script>
 </head>
 <body>
-    <button class="regresar" onclick="cambiarPagina('index.html')">Regresar</button>
+    <button class="regresar" onclick="cambiarPagina('inicio.html')">Regresar</button>
     <div class="contenedor-scores">
         <table id="listado"></table>
     </div>
