--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>¡Hola!</h1>
             <h2>Ingresa tu nombre aquí</h3>
             <input type="text" class="text-bg-info" id="jugador">
-            <button onclick="mostrarJuego()">Comenzar juego</button>
+            <button id="start" >Comenzar juego</button>
         </div>
     </div>
     <div id="juego" hidden>
