--- a/Inicio.html
+++ b/Inicio.html
@@ -13,11 +13,19 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos_inicio.css">
     <script src="js/script_inicio.js"></script>
+    <link rel="stylesheet" href="css/H&F.css">
 
     <title>Document</title>
 </head>
 
 <body>
+      <header>
+        <div class="header-left">
+          <button type="button" class="btn-header" onclick="location.href='inicio.html'">Inicio</button>
+          <button type="button" class="btn-header" onclick="location.href='creditos.html'">Creditos</button>
+        </div>
+      </header>
+
     <audio src="media/A Day to Remember - FiftySounds.mp3" loop="3" autoplay="true"></audio>
 
     <div id="texto">
@@ -45,8 +53,8 @@
     <script src="js/script_inicio.js" >
 
     </script>
-    <br>
-    <button type="button" class="btn btn-warning" onclick="location.href='index.html'" id="boton">Jugar!!</button>
+
+    <button type="button" class="btn-header" onclick="location.href='index.html'" id="boton">Jugar!!</button>
    
 </body>
 
